[package]
name = "jpeg-decoder"
version = "0.1.20"
authors = ["Ulf Nilsson <kaksmet@gmail.com>"]
description = "JPEG decoder"
documentation = "https://docs.rs/jpeg-decoder"
repository = "https://github.com/image-rs/jpeg-decoder"
readme = "README.md"
keywords = ["jpeg", "jpg", "decoder", "image"]
license = "MIT / Apache-2.0"
exclude = ["tests/*"]

[dependencies]
byteorder = "1.0"
# parallel mode dependencies
flume = { version = "0.9.1", default-features = false, optional = true }
crossbeam-utils = { version = "0.8.0",optional = true }
num_cpus = { version = "1.0", optional = true }

[dev-dependencies]
png = "0.16"
walkdir = "2.0"
criterion = "0.3"

[[bench]]
name = "decoding_benchmark"
harness = false

[features]
default = ["rayon"]
# Parallel mode feature is called "rayon" for backwards compatibility reasons.
# It no longer depends on `rayon` crate.
rayon = ["flume", "crossbeam-utils", "num_cpus"]
